--- a/themes/fromscratch/src/scss/layout/_wordpress-blocks.scss
+++ b/themes/fromscratch/src/scss/layout/_wordpress-blocks.scss
@@ -110,6 +110,9 @@
   // Cover
 
   .wp-block-cover {
+    padding: 0;
+    min-height: 320px;
+
     &:not(.alignfull) {
       border-radius: var(--fs-border-radius-m);
     }
